fixed issue #4 z-index

--- a/src/modalStyles.css
+++ b/src/modalStyles.css
@@ -1,4 +1,5 @@
 .modal-wrapper {
+    z-index: 101;
     position: fixed;
     display: flex;
     align-items: center;
